// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`with-noformat-pragma.yml - {"checkIgnorePragma":false} format 1`] = `
====================================options=====================================
checkIgnorePragma: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @noformat

    123

=====================================output=====================================
# @noformat

123

================================================================================
`;

exports[`with-noprettier-pragma.yml - {"checkIgnorePragma":false} format 1`] = `
====================================options=====================================
checkIgnorePragma: false
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# @noprettier

    123

=====================================output=====================================
# @noprettier

123

================================================================================
`;
